--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/homeLayout"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/colorPrimary"
     tools:context="org.wfp.serviceprovision.HomeFragment">
 
     <androidx.recyclerview.widget.RecyclerView
